--- a/PrivateSchoolCRUD/css/about.css
+++ b/PrivateSchoolCRUD/css/about.css
@@ -55,8 +55,11 @@ header {
     position: absolute;
     width: 1000px;
     height: 540px;
-    margin-top: 10px;
-    left: 270px;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     background: rgba(202, 189, 189, 0.322);
     border-radius: 10px 110px 10px 110px;
 }
