--- a/PrivateSchoolCRUD/css/addAssiPerStudPerCourse.css
+++ b/PrivateSchoolCRUD/css/addAssiPerStudPerCourse.css
@@ -52,13 +52,15 @@ header {
 }
 
 .container {
-    position: relative;
+    position: absolute;
     width: 1100px;
     height: 420px;
     padding-top: 30px;
-    margin-top: 40px;
-    margin-bottom: 0;
-    left: 170px;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     background: rgba(202, 189, 189, 0.322);
     border-radius: 10px 110px 10px 110px;
 }
