--- a/PrivateSchoolCRUD/css/contact.css
+++ b/PrivateSchoolCRUD/css/contact.css
@@ -52,12 +52,14 @@ header {
 }
 
 .container {
-    position: relative;
+    position: absolute;
     width: 500px;
     height: 240px;
-    left: 270px;
-    margin-top: 100px;
-    margin-left: 280px;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     padding-top: 30px;
     padding-left: 80px;
     background: rgba(202, 189, 189, 0.322);
